--- a/.github/workflows/v2.yaml
+++ b/.github/workflows/v2.yaml
@@ -29,6 +29,7 @@ jobs:
         --pull \
         --no-cache \
         --target binary-with-runtime \
+        --tag composer/composer:lts \
         --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+') \
         .
     # Build low-size image with binary only
@@ -38,6 +39,7 @@ jobs:
         --pull \
         --no-cache \
         --target standalone-binary \
+        --tag composer/composer:lts-bin \
         --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin \
         .
     - name: Login to Docker Hub
@@ -49,6 +51,8 @@ jobs:
     - name: Push tag(s) to Docker Hub
       if: github.ref == 'refs/heads/main'
       run: |
+        docker push composer/composer:lts
+        docker push composer/composer:lts-bin
         docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
         docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin
     - name: Login to Amazon Public ECR
@@ -61,8 +65,12 @@ jobs:
     - name: Push tag(s) to Amazon Public ECR
       if: github.ref == 'refs/heads/main'
       run: |
+        docker tag composer/composer:lts $ECR_REPO:lts
+        docker tag composer/composer:lts-bin $ECR_REPO:lts-bin
         docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
         docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin
+        docker push $ECR_REPO:lts
+        docker push $ECR_REPO:lts-bin
         docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
         docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin
   build23:
