--- a/.github/workflows/v2.yaml
+++ b/.github/workflows/v2.yaml
@@ -215,8 +215,6 @@ jobs:
           --pull \
           --no-cache \
           --target binary-with-runtime \
-          --tag composer/composer:latest \
-          --tag composer/composer:2 \
           --tag composer/composer:2.5 \
           --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+') \
           .
@@ -227,8 +225,6 @@ jobs:
           --pull \
           --no-cache \
           --target standalone-binary \
-          --tag composer/composer:latest-bin \
-          --tag composer/composer:2-bin \
           --tag composer/composer:2.5-bin \
           --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+')-bin \
           .
@@ -241,10 +237,6 @@ jobs:
       - name: Push tag(s) to Docker Hub
         if: github.ref == 'refs/heads/main'
         run: |
-          docker push composer/composer:latest
-          docker push composer/composer:latest-bin
-          docker push composer/composer:2
-          docker push composer/composer:2-bin
           docker push composer/composer:2.5
           docker push composer/composer:2.5-bin
           docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+')
@@ -259,19 +251,87 @@ jobs:
       - name: Push tag(s) to Amazon Public ECR
         if: github.ref == 'refs/heads/main'
         run: |
-          docker tag composer/composer:latest $ECR_REPO:latest
-          docker tag composer/composer:latest $ECR_REPO:latest-bin
-          docker tag composer/composer:2 $ECR_REPO:2
-          docker tag composer/composer:2 $ECR_REPO:2-bin
           docker tag composer/composer:2.5 $ECR_REPO:2.5
           docker tag composer/composer:2.5-bin $ECR_REPO:2.5-bin
           docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+')
           docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+')-bin
-          docker push $ECR_REPO:latest
-          docker push $ECR_REPO:latest-bin
-          docker push $ECR_REPO:2
-          docker push $ECR_REPO:2-bin
           docker push $ECR_REPO:2.5
           docker push $ECR_REPO:2.5-bin
           docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+')
           docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.5.\d+' Dockerfile | grep -oP '2.5.\d+')-bin
+  build26:
+    name: Build v2.6
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    defaults:
+      run:
+        working-directory: '2.6'
+    steps:
+      - uses: actions/checkout@v3
+      # Build full image: binary with runtime
+      - name: Build full image
+        run: |
+          docker build \
+          --pull \
+          --no-cache \
+          --target binary-with-runtime \
+          --tag composer/composer:latest \
+          --tag composer/composer:2 \
+          --tag composer/composer:2.6 \
+          --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+') \
+          .
+      # Build low-size image with binary only
+      - name: Build binary-only image
+        run: |
+          docker build \
+          --pull \
+          --no-cache \
+          --target standalone-binary \
+          --tag composer/composer:latest-bin \
+          --tag composer/composer:2-bin \
+          --tag composer/composer:2.6-bin \
+          --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+')-bin \
+          .
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Push tag(s) to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker push composer/composer:latest
+          docker push composer/composer:latest-bin
+          docker push composer/composer:2
+          docker push composer/composer:2-bin
+          docker push composer/composer:2.6
+          docker push composer/composer:2.6-bin
+          docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+')
+          docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+')-bin
+      - name: Login to Amazon Public ECR
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v1
+        with:
+          registry: public.ecr.aws
+          username: ${{ secrets.AWS_ECR_ACCESS_KEY }}
+          password: ${{ secrets.AWS_ECR_SECRET_KEY }}
+      - name: Push tag(s) to Amazon Public ECR
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker tag composer/composer:latest $ECR_REPO:latest
+          docker tag composer/composer:latest-bin $ECR_REPO:latest-bin
+          docker tag composer/composer:2 $ECR_REPO:2
+          docker tag composer/composer:2-bin $ECR_REPO:2-bin
+          docker tag composer/composer:2.6 $ECR_REPO:2.6
+          docker tag composer/composer:2.6-bin $ECR_REPO:2.6-bin
+          docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+')
+          docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+')-bin
+          docker push $ECR_REPO:latest
+          docker push $ECR_REPO:latest-bin
+          docker push $ECR_REPO:2
+          docker push $ECR_REPO:2-bin
+          docker push $ECR_REPO:2.6
+          docker push $ECR_REPO:2.6-bin
+          docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+')
+          docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.6.\d+' Dockerfile | grep -oP '2.6.\d+')-bin
