--- a/.github/workflows/v2.yaml
+++ b/.github/workflows/v2.yaml
@@ -88,6 +88,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     strategy:
+      fail-fast: false
       matrix:
         version:
           - "2.3"
