Fix PHP version to 8.1 for older composer versions
composer:2.3 and composer:2.4 are now fixed to PHP 8.1

--- a/2.3/Dockerfile
+++ b/2.3/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8-alpine AS binary-with-runtime
+FROM php:8.1.18-alpine3.18 AS binary-with-runtime
 
 RUN set -eux ; \
   apk add --no-cache --virtual .composer-rundeps \
