--- a/.github/workflows/v2-current.yaml
+++ b/.github/workflows/v2-current.yaml
@@ -77,19 +77,19 @@ jobs:
         if: github.ref == 'refs/heads/main'
         working-directory: ${{ matrix.version }}
         run: |
-          docker tag composer/composer:latest $ECR_REPO:latest
-          docker tag composer/composer:latest-bin $ECR_REPO:latest-bin
-          docker tag composer/composer:2 $ECR_REPO:2
-          docker tag composer/composer:2-bin $ECR_REPO:2-bin
-          docker tag composer/composer:${{ matrix.version }} $ECR_REPO:${{ matrix.version }}
-          docker tag composer/composer:${{ matrix.version }}-bin $ECR_REPO:${{ matrix.version }}-bin
-          docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+')
-          docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+')-bin
-          docker push $ECR_REPO:latest
-          docker push $ECR_REPO:latest-bin
-          docker push $ECR_REPO:2
-          docker push $ECR_REPO:2-bin
-          docker push $ECR_REPO:${{ matrix.version }}
-          docker push $ECR_REPO:${{ matrix.version }}-bin
-          docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+')
-          docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+')-bin
+          docker tag composer/composer:latest ${{ env.ECR_REPO }}:latest
+          docker tag composer/composer:latest-bin ${{ env.ECR_REPO }}:latest-bin
+          docker tag composer/composer:2 ${{ env.ECR_REPO }}:2
+          docker tag composer/composer:2-bin ${{ env.ECR_REPO }}:2-bin
+          docker tag composer/composer:${{ matrix.version }} ${{ env.ECR_REPO }}:${{ matrix.version }}
+          docker tag composer/composer:${{ matrix.version }}-bin ${{ env.ECR_REPO }}:${{ matrix.version }}-bin
+          docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+') ${{ env.ECR_REPO }}:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+')
+          docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+') ${{ env.ECR_REPO }}:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+')-bin
+          docker push ${{ env.ECR_REPO }}:latest
+          docker push ${{ env.ECR_REPO }}:latest-bin
+          docker push ${{ env.ECR_REPO }}:2
+          docker push ${{ env.ECR_REPO }}:2-bin
+          docker push ${{ env.ECR_REPO }}:${{ matrix.version }}
+          docker push ${{ env.ECR_REPO }}:${{ matrix.version }}-bin
+          docker push ${{ env.ECR_REPO }}:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+')
+          docker push ${{ env.ECR_REPO }}:$(grep -oP 'COMPOSER_VERSION ${{ matrix.version }}.\d+' Dockerfile | grep -oP '${{ matrix.version }}.\d+')-bin
