--- a/.github/workflows/v1.yaml
+++ b/.github/workflows/v1.yaml
@@ -1,8 +1,13 @@
 name: Docker - v1
 
 on:
-  pull_request: null
+  pull_request:
+    paths:
+      - .github/workflows/v1.yaml
+      - '1.10/**'
   push:
+    branches:
+      - main
     paths:
       - .github/workflows/v1.yaml
       - '1.10/**'
